[gd_scene load_steps=9 format=3 uid="uid://c85nsd8s2dlhj"]

[ext_resource type="Shader" uid="uid://c7u86k63i6wh0" path="res://pausemenu.gdshader" id="1_78yyw"]
[ext_resource type="Script" uid="uid://rlujeu1pbfvx" path="res://scenyGlobalne/pause_menu.gd" id="1_e7msu"]
[ext_resource type="FontFile" uid="uid://kg08gr31fkiq" path="res://fonts/Sixtyfour-Regular-VariableFont_BLED,SCAN.ttf" id="3_12s6w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e7msu"]
shader = ExtResource("1_78yyw")
shader_parameter/lod = 0.0

[sub_resource type="GDScript" id="GDScript_12s6w"]
script/source = "extends PanelContainer
"

[sub_resource type="Animation" id="Animation_hs5bo"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.9490196)]
}

[sub_resource type="Animation" id="Animation_t3j28"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7wsg5"]
_data = {
&"RESET": SubResource("Animation_t3j28"),
&"blur": SubResource("Animation_hs5bo")
}

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e7msu")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_e7msu")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -68.0
offset_right = 41.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_12s6w")

[node name="kontenerMENU" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 28

[node name="Label" type="Label" parent="PanelContainer/kontenerMENU"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.31764707, 1)
theme_override_fonts/font = ExtResource("3_12s6w")
theme_override_font_sizes/font_size = 67
text = "MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RESUME" type="Button" parent="PanelContainer/kontenerMENU"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_12s6w")
theme_override_font_sizes/font_size = 50
text = "RESUME"

[node name="SETTINGS" type="Button" parent="PanelContainer/kontenerMENU"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_12s6w")
theme_override_font_sizes/font_size = 50
text = "SETTINGS"

[node name="RESET" type="Button" parent="PanelContainer/kontenerMENU"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_12s6w")
theme_override_font_sizes/font_size = 50
text = "RESTART"

[node name="LOBBY" type="Button" parent="PanelContainer/kontenerMENU"]
process_mode = 3
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_12s6w")
theme_override_font_sizes/font_size = 50
text = "LOBBY"

[node name="QUIT" type="Button" parent="PanelContainer/kontenerMENU"]
process_mode = 3
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_12s6w")
theme_override_font_sizes/font_size = 50
text = "QUIT"

[node name="kontenerAREUSURE" type="VBoxContainer" parent="PanelContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 28

[node name="Label" type="Label" parent="PanelContainer/kontenerAREUSURE"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.31764707, 1)
theme_override_fonts/font = ExtResource("3_12s6w")
theme_override_font_sizes/font_size = 67
text = "ARE YOU SURE?"

[node name="YES" type="Button" parent="PanelContainer/kontenerAREUSURE"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_12s6w")
theme_override_font_sizes/font_size = 50
text = "YES"

[node name="NO" type="Button" parent="PanelContainer/kontenerAREUSURE"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_12s6w")
theme_override_font_sizes/font_size = 50
text = "NO"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7wsg5")
}

[connection signal="pressed" from="PanelContainer/kontenerMENU/RESUME" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/kontenerMENU/SETTINGS" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/kontenerMENU/RESET" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="PanelContainer/kontenerMENU/LOBBY" to="." method="_on_lobby_pressed"]
[connection signal="pressed" from="PanelContainer/kontenerMENU/QUIT" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/kontenerAREUSURE/YES" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="PanelContainer/kontenerAREUSURE/NO" to="." method="_on_no_pressed"]
